ICE-11333 fixed alignment issue with labels by incorporating CSS rules from YUI into the component's CSS
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@51996 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/checkboxbutton/checkboxbutton.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/checkboxbutton/checkboxbutton.css
@@ -23,6 +23,27 @@
 	padding: 0.2em 0.45em 0.2em 0.2em;
 }
 
+.ice-checkboxbutton .ui-button {
+	display: -moz-inline-box;
+	display: inline-block;
+	vertical-align: text-bottom;
+}
+
+.ice-checkboxbutton .ui-button .first-child {
+	display: block;
+	*display: inline-block;
+}
+
+.ice-checkboxbutton .ui-button button {
+    background-color: transparent;
+    *overflow: visible;
+    cursor: pointer;
+    display: block;
+    *display: inline-block;
+    border: none;
+    margin: 0;
+}
+
 .ice-checkboxbutton .ui-button > span > button {
     border:none;
 	padding: 0.2em 0.2em 0.2em 0.45em;
